--- a/Dev-Blog/Dev-Blog/Pages/Bio/Bio.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Bio/Bio.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Dev_Blog.Pages.Bio.IndexModel
+@model Dev_Blog.Pages.Bio.BioModel
 @{
     Layout = "_Layout";
 }
@@ -15,4 +15,3 @@
 <body id="bootstrap-override">
     <h1>My Bio</h1>
 </body>
-@*@Model.Login.*@
