Upload image to bio page.

--- a/Dev-Blog/Dev-Blog/Pages/Bio/Bio.cshtml
+++ b/Dev-Blog/Dev-Blog/Pages/Bio/Bio.cshtml
@@ -9,9 +9,22 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="~/css/All.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/Bio.css" />
 
     <title>Bio</title>
 </head>
 <body id="bootstrap-override">
-    <h1>My Bio</h1>
+    <main>
+        <div class="container">
+            <div class="card">
+                <div class="card-header text-center">
+                    <h3>About the Creator</h3>
+                </div>
+                <div class="card-body text-center">
+                    <p class="d-inline-flex">This is a very long description about myself.</p>
+                    <img src="~/Imgs/Me.jpg" height="400" width="400" />
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
